--- a/Implementacion/proySC/module/Application/view/application/index/index.phtml
+++ b/Implementacion/proySC/module/Application/view/application/index/index.phtml
@@ -1,26 +1,131 @@
-<div class="hero-unit">
-    <h1><?php echo sprintf($this->translate('Welcome to %sZend Framework 2%s'), '<span class="zf-green">', '</span>') ?></h1>
-    <p><?php echo sprintf($this->translate('Congratulations! You have successfully installed the %sZF2 Skeleton Application%s. You are currently running Zend Framework version %s. This skeleton can serve as a simple starting point for you to begin building your application on ZF2.'), '<a href="https://github.com/zendframework/ZendSkeletonApplication" target="_blank">', '</a>', \Zend\Version\Version::VERSION) ?></p>
-    <p><a class="btn btn-success btn-large" href="https://github.com/zendframework/zf2" target="_blank"><?php echo $this->translate('Fork Zend Framework 2 on GitHub') ?> &raquo;</a></p>
-</div>
-
-<div class="row">
-
-    <div class="span4">
-        <h2><?php echo $this->translate('Follow Development') ?></h2>
-        <p><?php echo sprintf($this->translate('Zend Framework 2 is under active development. If you are interested in following the development of ZF2, there is a special ZF2 portal on the official Zend Framework website which provides links to the ZF2 %swiki%s, %sdev blog%s, %sissue tracker%s, and much more. This is a great resource for staying up to date with the latest developments!'), '<a href="http://framework.zend.com/wiki/display/ZFDEV2/Home">', '</a>', '<a href="http://framework.zend.com/zf2/blog">', '</a>', '<a href="https://github.com/zendframework/zf2/issues">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://framework.zend.com/zf2" target="_blank"><?php echo $this->translate('ZF2 Development Portal') ?> &raquo;</a></p>
-    </div>
-
-    <div class="span4">
-        <h2><?php echo $this->translate('Discover Modules') ?></h2>
-        <p><?php echo sprintf($this->translate('The community is working on developing a community site to serve as a repository and gallery for ZF2 modules. The project is available %son GitHub%s. The site is currently live and currently contains a list of some of the modules already available for ZF2.'), '<a href="https://github.com/zendframework/modules.zendframework.com">', '</a>') ?></p>
-        <p><a class="btn btn-success" href="http://modules.zendframework.com/" target="_blank"><?php echo $this->translate('Explore ZF2 Modules') ?> &raquo;</a></p>
-   </div>
-
-   <div class="span4">
-       <h2><?php echo $this->translate('Help &amp; Support') ?></h2>
-       <p><?php echo sprintf($this->translate('If you need any help or support while developing with ZF2, you may reach us via IRC: %s#zftalk on Freenode%s. We\'d love to hear any questions or feedback you may have regarding the beta releases. Alternatively, you may subscribe and post questions to the %smailing lists%s.'), '<a href="irc://irc.freenode.net/zftalk">', '</a>', '<a href="http://framework.zend.com/wiki/display/ZFDEV/Mailing+Lists">', '</a>') ?></p>
-       <p><a class="btn btn-success" href="http://webchat.freenode.net?channels=zftalk" target="_blank"><?php echo $this->translate('Ping us on IRC') ?> &raquo;</a></p>
-   </div>
+<!-- todas las vistas tienen que tener un objeto DATA  -->
+<script type="text/javascript">
+/*
+viewContainer.bodyPanel = [{
+	layout: 'fit',
+	xtype: 'container',
+	autoHeight: true,
+	cls: 'fittedContainer',
+	items: [
+			{
+				xtype: 'container',
+				layout: 'column',
+				items:[
+						{
+							xtype: 'container',
+							columnWidth: .65,
+							layout: 'anchor',
+							items:[
+									{
+										xtype: 'container',
+										html: 'Mantener Organizacion',
+										cls: 'mainTitle'
+									},
+									{
+				       	       			xtype: 'container',
+				       	       			itemId: 'gridContainer',
+				       	       			cls: 'gridContainer',
+				       	       			layout: 'anchor',
+				       	       			items: [
+				       	       					{
+				               						xtype: 'grid',
+				               						height: 300,
+				               						sm: new Ext.grid.CellSelectionModel(),
+				               						store: new Ext.data.JsonStore({
+														// store configs
+														storeId: 'myStore',
+														// reader configs
+														root: '',
+														idProperty: 'name',
+														fields: ['name', 'url', {name:'size', type: 'float'}, {name:'lastmod', type:'date'}]
+														}),
+				               						cm: new Ext.grid.ColumnModel([
+														{ header: "Ticker", width: 60},
+														{ header: "Company Name", width: 150, id: 'company'},
+														{ header: "Market Cap.", width: 100},
+														{ header: "$ Sales", width: 100},
+														{ header: "Employees", width: 100, resizable: false}
+														])
+				           						}
+				       	       			]
+				       	   			},
+				       	   			{
+				       	       			xtype: 'container',
+				       	       			layout: 'anchor',
+				       	       			cls: 'pagingContainer',
+				       	       			items:[
+				       	       	   				{
+				       	       	       				xtype: 'paging',
+				       	       	       				store: null
+				       	       	   				}
+				       	       			]
+				       	   			}
+							]
+						},
+						{
+							xtype: 'container',
+							columnWidth: .35,
+							layout: 'anchor',
+							items:[
+									{
+										xtype: 'panel',
+										title: 'Crear Org',
+										cls: 'ladoDerecho',
+										layout: 'anchor',
+										height: 200,
+										items:[]
+									}
+							]
+						}
+				]
+			}
+	]
+},
+{
+	xtype: 'container',
+	columnWidth: 1,
+	layout: 'column',
+	cls: 'quickAccessBottom',
+	items:[
+			{
+				cls: 'dataBottom',
+				html: 'Agregar Organizacion',
+				xtype: 'container'
+			},
+			{
+				cls: 'dataBottom',
+				html: 'Agregar Otra Cosa',
+				xtype: 'container'
+			},
+			{
+				cls: 'dataBottom',
+				html: 'Ir Para Otro Lado',
+				xtype: 'container'
+			}				
+	]
+}];
+*/
+</script>
+<div style="margin: 30px auto; width: 550px; height: 550px; background-image: url('<?=$this->basePath();?>/img/layout/crop2.jpg');
+	background-repeat: no-repeat; background-position: center center; position: relative;">
+		<div style="position: absolute; top: 0; left: 40%;">
+			<a href="<?=$this->basePath();?>/vender">
+				<img alt="Vender" src="<?=$this->basePath();?>/img/icons/basket.png">
+			</a>
+		</div>
+		<div style="position: absolute; bottom: 0; left: 40%;">
+			<a href="<?=$this->basePath();?>/vender">
+				<img alt="Organizacion" src="<?=$this->basePath();?>/img/icons/company.png">
+			</a>
+		</div>
+		<div style="position: absolute; top: 40%; left: 0;">
+			<a href="<?=$this->basePath();?>/vender">
+				<img alt="Parte" src="<?=$this->basePath();?>/img/icons/purse.png">
+			</a>
+		</div>
+		<div style="position: absolute; top: 40%; right: 0;">
+			<a href="<?=$this->basePath();?>/org">
+				<img alt="Contabilidad" src="<?=$this->basePath();?>/img/icons/money.png">
+			</a>
+		</div>
 </div>
