--- a/Implementacion/proySC/public/css/layout/menu.css
+++ b/Implementacion/proySC/public/css/layout/menu.css
@@ -19,6 +19,7 @@
 
 .topFrameBot{
 	border-top: 1px solid gray;
+	overflow: hidden;
 	background-image: url("../../img/layout/bgBot.jpg");
 	background-repeat: repeat;
 }
@@ -34,7 +35,7 @@
 	height: 25px;
 	padding: 0 10px 10px 10px;
 	margin-right: 20px;
-	padding-left: 20px;
+	padding-left: 10px;
 	color: #666;
 }
 
@@ -44,8 +45,8 @@
 
 .menuSegundoNivel{
 	height: 32px;
-	width: 1024px;
-	margin-left: 50px;
+	width: 100%;
+	margin: 0 auto !important;
 }
 
 .crearFactura{
@@ -68,7 +69,7 @@
 .liSegundoNivel{
 	text-align: center;
 	float: left;
-	padding: 0 35px;
+	padding: 0 15px;
 	padding-top: 10px;
 	border-left: 1px solid #333;
 	font-family: Arial;
@@ -77,7 +78,7 @@
 	line-height: 14px;
 	border-right: 1px solid #333;
 	font-family: Arial;
-	font-size: 13px;
+	font-size: 11px;
 	text-decoration: none!important;
 }
 
@@ -90,7 +91,8 @@ a .liSegundoNivel {
 
 
 a:hover .liSegundoNivel{
-	
+	color: orange !important;
+	text-decoration: underline !important;
 }
 
 
