--- a/Implementacion/proySC/module/Application/view/layout/layout.phtml
+++ b/Implementacion/proySC/module/Application/view/layout/layout.phtml
@@ -164,6 +164,7 @@
     					{
     						xtype: 'container',
     						layout: 'anchor',
+    						id: 'mainViewContainer',
     						items: viewContainer.bodyPanel
     					}
     				]
