--- a/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
+++ b/Implementacion/proySC/module/Org/view/org/personas/index-ui.phtml
@@ -1,1 +1,387 @@
-<strong>hola personas</strong>
+
+<script type="text/javascript">
+function hideBloque()
+{
+	var cajaMensaje = Ext.getCmp('messageBox');
+	if(cajaMensaje){
+		cajaMensaje.addClass('oculto');
+	}	
+}
+
+function formularioPersona(isNew, data)
+{
+	return {
+		xtype: 'form',
+		title: (isNew)?('Agregar Persona'):('Editar Persona'),
+		cls: 'ladoDerecho',
+		bodyCssClass: 'formularioGeneral',
+		layout: 'form',
+		autoHeight: true,
+		items:[
+		       {
+			       xtype: 'hidden',
+			       name: 'org_parte_id',
+			       value: (isNew)?(null):(data.org_parte_id)
+		       },
+		       {
+			       fieldLabel: 'Apellido',
+			       name: 'apellido',
+			       value: (isNew)?(null):(data.apellido_persona),
+			       xtype: 'textfield',
+			       allowBlank: false
+		       },
+		       {
+			       fieldLabel: 'Nombre',
+			       name: 'nombre',
+			       value: (isNew)?(null):(data.nombre_persona),
+			       xtype: 'textfield',
+			       allowBlank: false
+		       },
+		       {
+			       fieldLabel: 'Fecha Nac.',
+			       name: 'fecha_nac',
+			       format: 'd/m/Y',
+			       value: (isNew)?(null):(data.fecha_nacimiento),
+			       xtype: 'datefield'
+		       },
+		       {
+			       fieldLabel: 'Genero',
+			       xtype: 'radiogroup',
+			       name: 'checkBoxGr',
+			       allowBlank: false,
+			       columns: 2,
+			       items: [
+			               {boxLabel: 'Hombre', name: 'genero_persona', inputValue: 'H', checked: (isNew)?(false):( (data.genero_persona == 'H')?(true):(false) )},
+			               {boxLabel: 'Mujer', name: 'genero_persona', inputValue: 'M', checked: (isNew)?(false):( (data.genero_persona == 'M')?(true):(false) )}
+			       ]
+		       },
+		       {
+			       xtype: 'container',
+			       layout: 'column',
+			       defaults:{style: {margin: '5px'}},
+			       items:[
+							{
+							    xtype: 'button',
+							    text: 'Guardar',
+							    handler: function(b,e){
+								       //verificar si esta todo ok
+								       var mainForm = b.ownerCt.ownerCt;
+								       basicForm = mainForm.getForm();
+								       if(basicForm.isValid())
+								       {
+									       var valores = basicForm.getFieldValues();
+
+									       
+									       if(valores.org_parte_id)//si existe es edicion
+									       {
+									    	   Ajax.PostElement.request({
+												   url: baseURL + '/org/empresas/editar',
+												   success: function(response, opt){
+												       mainStore.reload();
+												   },
+												   jsonData:{
+													   'put':{
+														   'org_parte_id': valores.org_parte_id,
+														   'nombre': valores.nombre,
+														   'apellido': valores.apellido,
+														   'fechaDeNacimiento': (formatearFecha(valores.fecha_nac, 1)),
+														   'genero': (valores.checkBoxGr)?(valores.checkBoxGr.inputValue):(null)
+													   },
+													   'formulario': mainForm.id
+												   }
+											   });
+									       }
+									       else
+									       {
+										       //sino es creacion
+									    	   //si esta todo ok hacemos la solicitud
+									    	   Ajax.PostElement.request({
+												   url: baseURL + '/org/personas/crear',
+												   success: function(response, opt){
+													   mainStore.reload();
+												   },
+												   jsonData:{
+												       'post':{
+														   'org_parte_id':null,
+														   'nombre': valores.nombre,
+														   'apellido': valores.apellido,
+														   'fechaDeNacimiento': (formatearFecha(valores.fecha_nac, 1)),
+														   'genero': (valores.checkBoxGr)?(valores.checkBoxGr.inputValue):(null)
+													   },
+													   'formulario': mainForm.id
+												   }
+											   });
+									       }
+									       
+									       
+									       
+								       }
+								       else
+									   {
+										   Ext.Msg.alert('Aviso','Hay campos inv&aacute;lidos');
+									   }       
+								   }
+							},
+							{
+								xtype: 'button',
+								text: 'Cancelar',
+								handler: function(b,e){
+									var mainForm = b.ownerCt.ownerCt;
+							        var padre = mainForm.ownerCt;
+							        padre.remove(mainForm);
+								}
+							}
+				   ]
+		       }
+		],
+		listeners:{
+			'render':function(){
+				hideBloque();
+			}
+		}
+	};	
+}
+
+function editarPersona(id)
+{
+	
+	var registro = mainStore.getById(id);
+	
+	if(registro)
+	{
+		var destino = Ext.getCmp('formContainer');
+		if(destino)
+		{
+			destino.removeAll();
+			var addedEl = destino.add(formularioPersona(false, registro.data));
+			destino.doLayout();
+			addedEl.body.highlight();
+		}
+	}
+}
+
+var mainStore = new Ext.data.JsonStore({
+	// store configs
+	totalProperty: 'numResults',
+	url: baseURL + '/org/personas/index',
+	// reader configs
+	root: 'records',
+	paramNames: {
+		start: 'p[page]',
+		limit: 'p[limit]'
+	},
+	baseParams: {
+		'p[limit]': 10,
+		'p[page]': 0
+	},
+	autoLoad:true,
+	idProperty: 'org_parte_id',
+	fields: ['org_parte_id','org_parte_tipo_codigo','nombre_persona','apellido_persona','genero_persona','fecha_nacimiento','foto','org_parte_tipo_nombre']
+});
+
+viewContainer.bodyPanel = [{
+	layout: 'fit',
+	xtype: 'container',
+	autoHeight: true,
+	cls: 'fittedContainer',
+	items: [
+			{
+				xtype: 'container',
+				id: 'secondMainContainer',
+				layout: 'column',
+				items:[
+						{
+							xtype: 'container',
+							columnWidth: .65,
+							layout: 'anchor',
+							items:[
+									{
+										xtype: 'container',
+										html: 'Mantener Personas',
+										cls: 'mainTitle'
+									},
+									{
+				       	       			xtype: 'container',
+				       	       			itemId: 'gridContainer',
+				       	       			cls: 'gridContainer',
+				       	       			layout: 'anchor',
+				       	       			items: [
+				       	       			        {
+					       	       			        xtype: 'toolbar',
+					       	       			        style:{padding:'5px'},
+					       	       			        items:[
+					       	       			               {
+						       	       			               xtype: 'displayfield',
+						       	       			               style:{marginRight: '5px'},
+						       	       			         	   value: 'Buscar: '
+					       	       			               },
+					       	       			               {
+						       	       			               xtype: 'textfield',
+						       	       			               name: 'nombre_busqueda'
+					       	       			               },
+					       	       			         		{
+						       	       			               xtype: 'button',
+						       	       			         	   iconCls: 'addIcon',
+						       	       			               text: 'Buscar',
+						       	       			               handler: function(b,e){
+																    var padre = b.ownerCt;
+																    //obtener valor del campo de texto
+																    var campo = padre.find('name','nombre_busqueda');
+																    if(campo.length>0)
+																    {
+																	    campo = campo[0];
+																	    mainStore.setBaseParam('s[nombre]',campo.getValue());
+																	    mainStore.load();
+																    }
+								       	       			       }
+					       	       			               },
+					       	       			         		{
+						       	       			               xtype: 'button',
+						       	       			         	   iconCls: 'addIcon',
+						       	       			               text: 'Limpiar',
+						       	       			               handler: function(b,e){
+																    var padre = b.ownerCt;
+																    //obtener valor del campo de texto
+																    var campo = padre.find('name','nombre_busqueda');
+																    if(campo.length>0)
+																    {
+																	    campo = campo[0];
+																	    campo.setValue(null);
+																	    mainStore.setBaseParam('s[nombre]',null);
+																	    mainStore.load();
+																    }
+								       	       			       }
+					       	       			               }
+							       	       			]
+				       	       			        },
+				       	       					{
+				               						xtype: 'grid',
+				               						height: 300,
+				               						id: 'mainGrid',
+				               						stripeRows: true,
+				               						loadMask: true,
+				               						sm: new Ext.grid.CellSelectionModel(),
+				               						viewConfig: {
+				               					        forceFit: true,
+				               					        emptyText: 'Sin Registros',
+				               					        loadingText: 'Cargando .. '
+				               						},
+				               						store: mainStore,
+				               						cm: new Ext.grid.ColumnModel([
+														{ header: "Apellido", dataIndex: 'apellido_persona', width: 160},
+														{ header: "Nombre", dataIndex: 'nombre_persona', width: 120},
+														{header: 'Gen.', dataIndex: 'genero_persona'},
+														{ header: "Fecha", align: 'center', dataIndex: 'fecha_nacimiento', width: 150, renderer: function(v,meta,record){
+															if(!v)
+																return '-';
+
+															return v;
+														}},
+														{ header: "Tipo", dataIndex: 'org_parte_tipo_nombre',  width: 100},
+														{ header: "Ver", dataIndex: null, fixed:true, width: 40, align: 'center', renderer: function(v,meta,record){
+															return '<div class="viewIcon" onclick="alert(\'En Implementacion\');"></div>';
+														}},
+														{ header: "Editar", dataIndex: null,  fixed:true, width: 40, align: 'center', renderer: function(v,meta,record){
+															return '<div class="editIcon" onclick="editarPersona(' + record.data.org_parte_id + ')"></div>';
+														}},
+														{ header: "Borrar", dataIndex: null,  fixed:true, width: 40, align: 'center', renderer: function(v,meta,record){
+															return '<div class="deleteIcon" onclick="alert(\'En Implementacion\');"></div>';
+														}}
+														])
+				           						}
+				       	       			]
+				       	   			},
+				       	   			{
+				       	       			xtype: 'toolbar',
+				       	       			layout: 'toolbar',
+				       	       			cls: 'pagingContainer',
+				       	       			items:[
+				       	       			        {
+					       	       			        xtype: 'button',
+					       	       			        iconCls: 'addIcon',
+					       	       			        text: 'Agregar',
+													handler: function(b,e){
+														//buscamos destino
+														var destino = Ext.getCmp('formContainer');
+														if(destino)
+														{
+															destino.removeAll();
+															var addedEl = destino.add(formularioPersona(true, null));
+															destino.doLayout();
+															addedEl.body.highlight();
+														}
+													}
+				       	       			        },
+						       	       			'->',
+				       	       	   				{
+				       	       	       				xtype: 'paging',
+				       	       	       				displayInfo: true,
+				       	       	       				store: mainStore,
+				       	       	       				pageSize: 10,
+				       	       	       				preprendButtons: true
+				       	       	   				}
+				       	       			]
+				       	   			}
+							]
+						},
+						{
+							xtype: 'container',
+							columnWidth: .35,
+							layout: 'anchor',
+							items:[
+			    					{
+			    						xtype: 'container',
+			    						layout: 'anchor',
+			    						cls: 'oculto',
+			    						id: 'messageBox',
+			    						items:[
+			    						       {
+			        						       xtype: 'container',
+			    						    	   html: 'Generico'
+			    						       }
+			    					
+			   	    					]
+			    					},
+							       {
+									     xtype: 'container',
+									     layout: 'anchor',
+									     id: 'formContainer'
+							       }
+									/*{
+										xtype: 'panel',
+										title: 'Crear Org',
+										cls: 'ladoDerecho',
+										layout: 'anchor',
+										height: 200,
+										items:[]
+									}*/
+							]
+						}
+				]
+			}
+	]
+},
+{
+	xtype: 'container',
+	columnWidth: 1,
+	layout: 'column',
+	cls: 'quickAccessBottom',
+	items:[
+			{
+				cls: 'dataBottom',
+				html: 'Agregar Organizacion',
+				xtype: 'container'
+			},
+			{
+				cls: 'dataBottom',
+				html: 'Agregar Otra Cosa',
+				xtype: 'container'
+			},
+			{
+				cls: 'dataBottom',
+				html: 'Ir Para Otro Lado',
+				xtype: 'container'
+			}				
+	]
+}];
+</script>
