--- a/Implementacion/proySC/module/Application/view/layout/layout.phtml
+++ b/Implementacion/proySC/module/Application/view/layout/layout.phtml
@@ -18,17 +18,25 @@
 		<script type="text/javascript" src="<?php echo $this->basePath(); ?>/js/formatearFecha.js"></script>
 		<script type="text/javascript">
 
+		
+		
 		var baseURL = '<?=$this->basePath()?>';
+
+		function buttonClick(b,e)
+		{
+			location.href = baseURL + '/' + b.modulo + '/' + b.codigo + '/index-ui';
+		}
 		
 			Ext.onReady(function(){
 
 				new Ext.Viewport({
     				layout: 'anchor',
     				id: 'mainContainer',
-    				style: {overflowY: 'auto'},
+    				autoScroll:true,
+					//style:{overflowX:'hidden', overflowY:'auto'},
     				items: [
     					{
-        					height: 139,
+        					height: 32,
         					xtype: 'container',
         					cls: 'topFrame',
         					border: false,
@@ -37,31 +45,53 @@
         					items:[
         							//tres bloques
         							{
-        								height: 20,
-        								layout: 'anchor',
-        								cls: 'topFrameTop',
+        								height: 30,
+        								autoWidth:true,
+        								xtype: 'toolbar',
         								items: [
-        										{
-        											cls: 'miniMenuSuperior',
-        											xtype: 'container',
-        											data: [
-        												{data:'Ayuda', link:'http://www.google.com'},
-        												{data:'Otro', link:'http://www.google.com'},
-        												{data:'Salir', link:'http://www.google.com'}
-        											],
-        											tpl: new Ext.XTemplate(
-        												'<div class="miniMenuSuperiorDIV">',
-        												'<tpl for=".">',
-        													'<a href="{link}">{data}',
-        													'</a>',
-        												'</tpl>',
-        												'</div>'
-        											),
-        											items:[
-        											]
-        										}
+        								        {
+            								        text: 'Organizacion',
+            								        split: true,
+            								        menu:{
+                								        defaults:{handler: buttonClick},
+														items:[
+														       {text: 'Mantener Empresa', codigo: 'empresas', modulo: 'org'},
+														       {text: 'Mantener Persona', codigo: 'personas', modulo: 'org'},
+														       {text: 'Mantener Roles', codigo: 'roles-de-partes', modulo: 'org'}
+														]
+                								    }
+        								        },
+        								        '-',
+        								        {
+            								        text: 'Stock',
+            								        split: true,
+            								        menu:{
+            								        	defaults:{handler: buttonClick},
+														items:[
+														       {text: 'Mantener Articulo', codigo: 'articulo', modulo: 'stock'},
+														       {text: 'Mantener Tipo Articulo', codigo: 'articulo-tipo', modulo: 'stock'}
+														]
+                								    }
+        								        },'-',
+        								        {
+            								        text: 'Contabilidad',
+            								        split: true,
+            								        menu:{
+            								        	defaults:{handler: buttonClick},
+														items:[
+														       {text: 'Mantener Moneda', codigo: 'moneda', modulo: 'cont'},
+														       {text: 'Mantener Tasa Cambio', codigo: 'tasa-cambio', modulo: 'cont'}
+														]
+                								    }
+        								        },'-',
+        								        {
+            								        text: 'Salir',
+            								        handler: function(b,e){
+														Ext.Msg.alert('Aviso','En Impl.');
+                								    }
+        								        }
         								]
-        							},
+        							}/*,
         							{
         								height: 84,
         								cls: 'topFrameMid',
@@ -161,7 +191,7 @@
 													}
 												}
 											)
-        							}
+        							}*/
         					]
     					},
     					{
