--- a/Implementacion/proySC/public/css/layout/contenedor.css
+++ b/Implementacion/proySC/public/css/layout/contenedor.css
@@ -1,10 +1,21 @@
 
 .mainTitle{
-	margin: 0 0 20px 10px;
+	padding: 10px;
 	color: #333;
 	font-size: 1.5em;
 	font-weight: normal;
-	font-family: ProximaNovaLtRegular;
+	font-family: Arial;
+	color: white;
+	
+	background: #1e5799; /* Old browsers */
+	background: -moz-linear-gradient(-45deg,  #1e5799 0%, #207cca 69%, #7db9e8 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#1e5799), color-stop(69%,#207cca), color-stop(100%,#7db9e8)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg,  #1e5799 0%,#207cca 69%,#7db9e8 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg,  #1e5799 0%,#207cca 69%,#7db9e8 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg,  #1e5799 0%,#207cca 69%,#7db9e8 100%); /* IE10+ */
+	background: linear-gradient(135deg,  #1e5799 0%,#207cca 69%,#7db9e8 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#7db9e8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	
 }
 
 
