--- a/Implementacion/proySC/public/css/layout/menu.css
+++ b/Implementacion/proySC/public/css/layout/menu.css
@@ -37,6 +37,16 @@
 	margin-right: 20px;
 	padding-left: 10px;
 	color: #666;
+	
+	background: rgb(136,191,232); /* Old browsers */
+	background: -moz-linear-gradient(-45deg,  rgba(136,191,232,1) 0%, rgba(112,176,224,1) 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(136,191,232,1)), color-stop(100%,rgba(112,176,224,1))); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(-45deg,  rgba(136,191,232,1) 0%,rgba(112,176,224,1) 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(-45deg,  rgba(136,191,232,1) 0%,rgba(112,176,224,1) 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(-45deg,  rgba(136,191,232,1) 0%,rgba(112,176,224,1) 100%); /* IE10+ */
+	background: linear-gradient(135deg,  rgba(136,191,232,1) 0%,rgba(112,176,224,1) 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#88bfe8', endColorstr='#70b0e0',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+	
 }
 
 .ladoDerecho{
@@ -93,6 +103,23 @@ a .liSegundoNivel {
 a:hover .liSegundoNivel{
 	color: orange !important;
 	text-decoration: underline !important;
+}
+
+
+#secondMainContainer
+{
+	-webkit-border-radius: 11px;
+	-moz-border-radius: 11px;
+	border-radius: 11px;	
+	border-color: rgb(154, 181, 219);
+	border-style: solid;
+	padding: 10px;
+	
+	marginLeft: -5px;
+	marginRight: -15px;
+	-moz-box-shadow: 10px 10px 5px #888;
+	-webkit-box-shadow: 10px 10px 5px #888;
+	box-shadow: 10px 10px 5px #888;
 }
 
 
