prueba creando un modulo de "Cont" con el listado de "Moneda"

--- a/Implementacion/proySC/module/Application/view/layout/layout.phtml
+++ b/Implementacion/proySC/module/Application/view/layout/layout.phtml
@@ -69,7 +69,9 @@
             								        	defaults:{handler: buttonClick},
 														items:[
 														       {text: 'Mantener Articulo', codigo: 'articulo', modulo: 'stock'},
-														       {text: 'Mantener Tipo Articulo', codigo: 'articulo-tipo', modulo: 'stock'}
+														       {text: 'Mantener Marca', codigo: 'marca', modulo: 'stock'},
+														       {text: 'Mantener Categoria', codigo: 'categoria', modulo: 'stock'},
+														       {text: 'Mantener Garantia Tipo', codigo: 'garantia_tipo', modulo: 'stock'}
 														]
                 								    }
         								        },'-',
